* core: #2403 fixed: start conference with preferred contacts of each buddy instead of first ones (ultr)
* core: #2434 done: account password is now forgotten after offline status is set and 'Remember password' option is disabled (Juzef)
* chat styles: #1866 fixed: use small version of avatars in chat window (Vogel)
* emoticons: #2475 fixed: accept non-latin characters in emoticons (Vogel)

+++ version 0.12.0-beta1
* tabs: "Close all tabs but active one" action added (Juzef)
* last_seen: #1430 done: added context menu in Last Seen window (Vogel)
* configuration: #2529 fixed: prevent loss of XML nodes with same tags in one parent node (ultr)
* tabs: #2098, #2497 fixed: respect blocking window closing settings (Vogel)
* gui: #2479 fixed: information panel didn't display anything for chats (Vogel)
* gui: #2472 fixed: use common status icons in Status Window when changing status for all accounts (Vogel)
* single_window: #2470 fixed: "Start Docked" didn't work for Single Window plugin (Vogel)
* gui: #1916 fixed: use Kadu icon for all non-chat windows (Vogel)
* core: #2312 fixed: properly remove all contacts and chats when removing account (Vogel)
* gui: #1785 fixed: invalid parsing of some URLs (Vogel)
* gui: #1838 fixed: use system highlight color in emoticons selector (Vogel)
* notify: #2355 done: implement fullscreen apps detection option for Windows (mziab, beevvy)
* gui: #2491 done: disable toolbar borders on Windows (beevvy)
* jabber: #2000 fixed: not allowed to change buddy's name for GMail contacts (Vogel)

+++ version 0.12.0-alpha4
* sql_history: #2484 done: removed uuids from history file, now history can be moved between instances (Vogel)
* buddies: #2489 done: removed BuddiesModel and BuddiesModelBase classes (Vogel)
* chat styles: #2499 fixed: keep message borders for long content (ultr)
* jabber: #2141 done: MUC support added (Vogel)
* sms: #359 done: more detailed process of sending SMS with possibility of cancelation in any moment (Vogel)